Trying to solve spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -650,10 +650,6 @@ header{
 	width:3em;
 }
 
-img{
+.img-flex{
 	max-width:100%;
-}
-
-.about{
-	padding:3em;
 }
